--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Omar-Abosea3.github.io/game-over",
   "name": "assignment-1-react",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "jquery": "^3.6.4",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -21,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
